sort.basic.selection.AlgSelectionSort.scala.error
Compilation error:
AlgSelectionSort:4: error: not found: value indMin
    indMin = i
    ^AlgSelectionSort:6: error: not found: value min
      if (getValeur(j)<min){
                       ^AlgSelectionSort:7: error: not found: value indMin
        indMin = j
        ^AlgSelectionSort:10: error: not found: value j
    echange(i,j)
              ^