sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
  for (i <- 0 to getNombreValeurs() -1){
    indMin = i
    for (j <- i to getNombreValeurs() -1){
      if (getValeur(j)<min){
        indMin = j
      }
    }
    echange(i,j)
  }
}